<resources>
    <string name="app_name">ReinventateCovid</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_pantalla__adulto">Pantalla_Adulto</string>
    <string name="title_activity_pantalla__senior">Pantalla_Senior</string>
    <string name="juegos">JUEGOS</string>
    <string name="consejos">CONSEJOS</string>
    <string name="que_hacer">QUE HACER</string>
    <string name="noticias">NOTICIAS</string>
    <string name="seguimiento_covid">seguimiento_covid</string>
    <string name="seguimientocovid">seguimiento covid</string>
    <string name="Emergencias">Emergencias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="que_hago_hoy">QUE HAGO HOY</string>
</resources>