<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pantalla_junior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pantalla_Junior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_init"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/covid_cut"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".Menu_init">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="104dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:text="CovInfo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#A7FFEB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            tools:textAlignment="center" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="77dp"
            android:layout_height="67dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/monigote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="-81dp">

            <ImageButton
                android:id="@+id/button_info4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="InfoJunior"
                android:src="@android:drawable/ic_menu_info_details"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.954"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.976" />

            <Button
                android:id="@+id/button2"
                android:layout_width="230dp"
                android:layout_height="69dp"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="124dp"
                android:layout_marginEnd="93dp"
                android:layout_marginRight="93dp"
                android:layout_marginBottom="76dp"
                android:background="#000000"
                android:drawableLeft="@drawable/juegoosss1"
                android:onClick="IrJuegos"
                android:text="@string/juegos"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#81d4fa"
                app:layout_constraintBottom_toTopOf="@+id/Consejos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/Consejos"
                android:layout_width="230dp"
                android:layout_height="69dp"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="93dp"
                android:layout_marginRight="93dp"
                android:drawableLeft="@drawable/idea1"
                android:onClick="IrConsejos"
                android:text="@string/consejos"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#29b6f6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <Button
                android:id="@+id/BotonQueHago"
                android:layout_width="230dp"
                android:layout_height="69dp"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="76dp"
                android:drawableLeft="@drawable/queeeehagooo"
                android:onClick="IrQueHacerJunior"
                android:text="@string/que_hago_hoy"
                android:textColor="#191818"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#039be5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Consejos" />

            <Button
                android:id="@+id/BotonNoticiasJunior"
                android:layout_width="230dp"
                android:layout_height="69dp"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="76dp"
                android:drawableLeft="@drawable/buenaanoticia"
                android:onClick="IrNoticiasJunior"
                android:text="@string/noticias"
                android:textColor="#000000"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:backgroundTint="#098AD8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BotonQueHago" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="96dp"
                android:layout_height="67dp"
                android:layout_marginStart="315dp"
                android:layout_marginLeft="315dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="57dp"
                android:src="@drawable/kid_icon"
                app:layout_constraintBottom_toTopOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>